<resources>
    <string name="app_name">Video Ruletka</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_text">Some text of privacy policy…</string>
    <string name="privacy_policy_checkbox">Agree with Privacy Policy</string>
    <string name="entry">Entry</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sport_text">Do you play sports?</string>
    <string name="games_text">Do you play board games?</string>
    <string name="run_text">Do you run in the morning?</string>
    <string name="marital_status">What is your marital status?</string>
    <string name="divorced">Divorced</string>
    <string name="not_married">Not married</string>
    <string name="widower">A widower</string>
    <string name="name_label">What is your name?</string>
    <string name="save">Save</string>
    <string name="city_label">Where are you from?</string>
    <string name="dialog_text">Your profile will be checked by a moderator</string>
    <string name="dialog_title">Thank you for registering.</string>
    <string name="dialog_positive_button">@android:string/ok</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="empty_name">Empty name</string>
    <string name="empty_city">Empty city</string>
    <string name="choose_photo">Pick a photo</string>
    <string name="photo_label">Upload a photo</string>
    <string name="load">Load</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="error_photo_upload">Cannot open file chooser</string>
    <string name="open_web">Start open</string>
    <string name="load_web">Waiting for data</string>
    <string name="authorized_error">Empty name or empty password</string>
</resources>