<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.MaritalFragment"
    android:padding="25dp">

    <TextView
        android:id="@+id/textViewMarital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marital_status"
        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textViewMarital"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/buttonDivorced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/divorced" />

        <Button
            android:id="@+id/buttonNoMarried"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/not_married" />

        <Button
            android:id="@+id/buttonWidower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widower" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>